[FIX] logout button overlapping content on small screen

--- a/addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
+++ b/addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
@@ -1058,6 +1058,12 @@ label.un-focused.empty {
     }
 }
 
+@media only screen and (max-width: 768px) {
+    #wsd_checkout_form_inside_row .wsd_button_opc_logout {
+        float: none;
+    }
+}
+
 #cart_total {
     width: 100%;
 }
